2000-09-14  Havoc Pennington  <hp@pobox.com>

	* gconf/gconf.c (gconf_engine_all_dirs): Update to 
	return fully qualified name in GConfEntry
	(gconf_engine_all_entries): missed the local case
	earlier when adapting it to use fully-qualified name

	* acinclude.m4: Add never-use-included-gettext macro

	* configure.in: Bump version to 0.9

2000-09-14  Darin Adler  <darin@eazel.com>

	* backends/xml-dir.c: (dir_load): Fixed code that set up file mode
	to always be 0600 to instead inherit from parent directory as
	intended.
	
	* gconf/gconf-sources.c: (gconf_sources_new_from_addresses):
	Removed unused variable.
	* tests/.cvsignore: Added some generated files.

2000-09-13  Havoc Pennington  <hp@redhat.com>

	* More renaming:

	s/gconf_meta_info_schema/gconf_meta_info_get_schema/g;
	s/gconf_meta_info_mod_user/gconf_meta_info_get_mod_user/g;
	s/gconf_meta_info_mod_time/gconf_meta_info_mod_time/g;

	s/gconf_entry_key/gconf_entry_get_key/g;
	s/gconf_entry_value/gconf_entry_get_value/g;
	s/gconf_entry_schema_name/gconf_entry_get_schema_name/g;
	s/gconf_entry_is_default/gconf_entry_get_is_default/g;

	s/gconf_value_string/gconf_value_get_string/g;
	s/gconf_value_int/gconf_value_get_int/g;
	s/gconf_value_float/gconf_value_get_float/g;
	s/gconf_value_list_type/gconf_value_get_list_type/g;
	s/gconf_value_list/gconf_value_get_list/g;
	s/gconf_value_car/gconf_value_get_car/g;
	s/gconf_value_cdr/gconf_value_get_cdr/g;
	s/gconf_value_bool/gconf_value_get_bool/g;
	s/gconf_value_schema/gconf_value_get_schema/g;

	s/gconf_schema_type/gconf_schema_get_type/g;
	s/gconf_schema_list_type/gconf_schema_get_list_type/g;
	s/gconf_schema_car_type/gconf_schema_get_car_type/g;
	s/gconf_schema_cdr_type/gconf_schema_get_cdr_type/g;
	s/gconf_schema_locale/gconf_schema_get_locale/g;
	s/gconf_schema_short_desc/gconf_schema_get_short_desc/g;
	s/gconf_schema_long_desc/gconf_schema_get_long_desc/g;
	s/gconf_schema_owner/gconf_schema_get_owner/g;