@@ -1662,7 +1662,7 @@ const gchar  *key,gchar       **why_invalid
 const gchar  *above,const gchar  *below
 </FUNCTION>
 <FUNCTION>
-<NAME>gconf_concat_key_and_dir</NAME>
+<NAME>gconf_concat_dir_and_key</NAME>
 <RETURNS>gchar *</RETURNS>
 const gchar  *dir,const gchar  *key
 </FUNCTION>
