@@ -106,7 +106,7 @@ gconf_load_source_path
 gconf_shutdown_daemon
 gconf_ping_daemon
 gconf_spawn_daemon
-gconf_concat_key_and_dir
+gconf_concat_dir_and_key
 gconf_string_to_gulong
 gconf_current_locale
 GConfLogPriority
