@@ -166,7 +166,7 @@ gconf-internals
 @Returns: 
 
 
-<!-- ##### FUNCTION gconf_concat_key_and_dir ##### -->
+<!-- ##### FUNCTION gconf_concat_dir_and_key ##### -->
 <para>
 
 </para>
