@@ -1,3 +1,7 @@
+2000-09-15  Havoc Pennington  <hp@redhat.com>
+
+	* s/gconf_concat_key_and_dir/gconf_concat_dir_and_key/g
+
 2000-09-14  Havoc Pennington  <hp@pobox.com>
 
 	* gconf/gconf.c (gconf_engine_all_dirs): Update to 
